--- a/app/src/main/res/layout/asset_row.xml
+++ b/app/src/main/res/layout/asset_row.xml
@@ -11,17 +11,15 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="256px"
-        android:layout_height="128px"
+        android:layout_width="55dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_weight="1"
         android:padding="5dp"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:orientation="vertical"
         android:padding="5dp"
         android:weightSum="1">
