--- a/app/src/main/res/layout/clicked_asset.xml
+++ b/app/src/main/res/layout/clicked_asset.xml
@@ -7,7 +7,7 @@
     android:paddingTop="20dp">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/clickedImage"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
