--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="henrygarant.com.cryptomanager.MainActivity">
+
     <item
+        android:id="@+id/spinner"
+        app:showAsAction="ifRoom"
+        android:title="Sort"
+        app:actionViewClass="android.widget.Spinner" />
+
+    <!--<item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
 </menu>
