--- a/app/src/main/res/layout/asset_row.xml
+++ b/app/src/main/res/layout/asset_row.xml
@@ -8,14 +8,33 @@
     android:background="@color/colorPrimary"
     android:orientation="horizontal">
 
-
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="55dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:padding="5dp"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:orientation="vertical"
+        android:padding="1dp"
+        android:weightSum="2">
+
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_weight="1"
+            android:padding="5dp"
+            app:srcCompat="@mipmap/ic_launcher_round" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/likeButton"
+            android:layout_width="60dp"
+            android:layout_height="45dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_weight="1"
+            app:lottie_autoPlay="false"
+            app:lottie_rawRes="@raw/notliked" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,16 +57,23 @@
                 android:layout_weight=".5"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/name"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Name"
-                    android:textColor="@android:color/background_light"
-                    android:textSize="22sp"
-                    tools:layout_editor_absoluteX="16dp"
-                    tools:layout_editor_absoluteY="16dp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Name"
+                        android:textColor="@color/text"
+                        android:textSize="22sp"
+                        tools:layout_editor_absoluteX="16dp"
+                        tools:layout_editor_absoluteY="16dp" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/ticker"
@@ -66,12 +92,13 @@
                 android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="5dp"
                 android:layout_weight=".5"
                 android:paddingEnd="5dp"
                 android:text="$$$"
                 android:textAlignment="textEnd"
-                android:textColor="@android:color/background_light"
-                android:textSize="20sp" />
+                android:textColor="@color/text"
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
