--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#313131</color>
+
+    <!--Dark Themed-->
+    <color name="colorPrimary">#2f3640</color>
     <color name="colorPrimaryDark">#202020</color>
     <color name="colorAccent">#fff</color>
-
     <color name="divider">#67ffffff</color>
+
+
+    <color name="text">#f5f6fa</color>
+
+
     <color name="up">#81FF6B</color>
     <color name="down">#FF7276</color>
 
